changing files after the content addition

--- a/bb.html
+++ b/bb.html
@@ -86,16 +86,13 @@
         <img src="images/bbs.jpg" alt="" class="img_inner fleft inn__1">
         <div class="extra_wrapper">
           <!-- <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div> -->
-          <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
-          <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
-          Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <p>Realfoods real bouillabaisse is a real treat, made from real corn,wheat,soya and palm oil, this amazing seafood dish contains no seafood at all! It is suitable for vegetarians,vegans and also makes a great treat for your pets. This Item does not come in gluten free form. </p> 
         </div>
         <div class="clear"></div>
-        <h2>Useful Information</h2>
-        <div class="text1 tx__1"><a href="#">Hivamus at magna non nuncerto limonit nelowert sedrolino. Integer convallis orci vel miеter laoreet, at ornare lorem consequat. Phasellus erat nisl, auctor vel velit sed.</a></div>
-        <p>Nehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeet metus id laoreet rolito monert dertolimon.</p>
-        <p>Nullam consectetur orci sed nulla facilisisequat. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero. </p>
-        Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. <br>
+        <h2>More Information</h2>
+        <p>
+          You don’t need more info, We are Realfoods.com, We know best.</p>
+          <br>
         <a href="#" class="btn">Download Recipe</a>
       </div>
       <!--
@@ -173,23 +170,14 @@
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-pinterest"></a>
         </div>
-        <div class="copyright"><span class="brand">Bliss </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> <div>Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>
+        <div class="copyright"><span class="brand">Food For Thought </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> 
         </div>
       </div>
     </div>
   </div> 
 </footer> 
-  <script>
-  $(function (){
-        $('#bookingForm').bookingForm({
-            ownerEmail: '#'
-        });
-    })
-    $(function() {
-   $('#bookingForm input, #bookingForm textarea').placeholder();
-  });
-    
-  </script>
 </body>
 </html>
+
+
 
