--- a/beremeal.html
+++ b/beremeal.html
@@ -86,16 +86,11 @@
         <img src="images/beremeals.jpg" alt="" class="img_inner fleft inn__1">
         <div class="extra_wrapper">
           <!-- <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div> -->
-          <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
-          <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
-          Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <p>Beremeal has been described as having an earthy, slightly astringent, nutty flavour. It is traditionally used to make a dark-greyish bannock, a soft roll that is a speciality of Orkney, Shetland and the Western Isles. A scientific nutritional analysis of Beremeal shows a wide variety of macro- and micro-nutrients, including significant quantities of folate, thiamine, pantothenic acid, iron, iodine and magnesium. Like other types of barley, Bere also aids in improving kidney function </p> 
         </div>
         <div class="clear"></div>
-        <h2>Useful Information</h2>
-        <div class="text1 tx__1"><a href="#">Hivamus at magna non nuncerto limonit nelowert sedrolino. Integer convallis orci vel miеter laoreet, at ornare lorem consequat. Phasellus erat nisl, auctor vel velit sed.</a></div>
-        <p>Nehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeet metus id laoreet rolito monert dertolimon.</p>
-        <p>Nullam consectetur orci sed nulla facilisisequat. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero. </p>
-        Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. <br>
+        <h2>More Information</h2>
+        <p>Bere was grown historically in Wales (as Haidd Garw or Coarse barley) and Scotland on higher lands of poor fertility (Highlands and Islands).  The short growing season of Bere suits the lands of low fertility and long summer daylight hours. The long history of Bere cultivation within Scotland has led to a wide genetic diversity between Bere populations. Beremeal was widely used throughout Scotland where barley bannocks were eaten as the main bread. Hand mills or querns produced Beremeal for household purposes while watermills produced meal on a larger scale.</p> <br>
         <a href="#" class="btn">Order Online</a>
       </div>
       
@@ -115,23 +110,12 @@
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-pinterest"></a>
         </div>
-        <div class="copyright"><span class="brand">Bliss </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> <div>Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>
+        <div class="copyright"><span class="brand">Food For Thought </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> 
         </div>
       </div>
     </div>
   </div> 
 </footer> 
-  <script>
-  $(function (){
-        $('#bookingForm').bookingForm({
-            ownerEmail: '#'
-        });
-    })
-    $(function() {
-   $('#bookingForm input, #bookingForm textarea').placeholder();
-  });
-    
-  </script>
 </body>
 </html>
 
