--- a/st.html
+++ b/st.html
@@ -86,16 +86,12 @@
         <img src="images/sts.jpg" alt="" class="img_inner fleft inn__1">
         <div class="extra_wrapper">
           <!-- <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div> -->
-          <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
-          <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
-          Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <p>Our surf 'n' turf is a main course which combines the taste seafood and red meat. Made with only wheat,corn,soya and palm oil, it is suitable for people of all diets. Gluten free version available also.  The seafood used may be lobster, prawns, or shrimp, which may be steamed, grilled or breaded and fried, This driver is completely customisable.</p> 
         </div>
         <div class="clear"></div>
-        <h2>Useful Information</h2>
-        <div class="text1 tx__1"><a href="#">Hivamus at magna non nuncerto limonit nelowert sedrolino. Integer convallis orci vel miеter laoreet, at ornare lorem consequat. Phasellus erat nisl, auctor vel velit sed.</a></div>
-        <p>Nehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeet metus id laoreet rolito monert dertolimon.</p>
-        <p>Nullam consectetur orci sed nulla facilisisequat. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero. </p>
-        Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. <br>
+        <h2>More Information</h2>
+        <p>
+        You don’t need more info, We are Realfoods.com, We know best.</p> <br>
         <a href="#" class="btn">Download Recipe</a>
       </div>
        
