--- a/cp.html
+++ b/cp.html
@@ -86,16 +86,14 @@
         <img src="images/cps.jpg" alt="" class="img_inner fleft inn__1">
         <div class="extra_wrapper">
           <!-- <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div> -->
-          <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
-          <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
-          Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <p>Carlin peas, also known as black peas, are sold dried or in packs from grocers or offered cooked in portions of about 75-100g. The peas come in two colours, a brown hue and a reddish hue. With enough sunlight and water, the traditional varieties grow to a height of approximately 6 feet (1.83 metres). Carlin peas are an abundant crop that can be eaten in various ways. They are most commonly cooked from dry after overnight soaking, but some people prefer to eat them fresh. For the traditional Bonfire Night (5th November) dish of parched peas, the peas are boiled and heavily seasoned with vinegar, which gives them an earthy taste, or fried in butter. They make an excellent addition to Black Badger brownies.</p> 
         </div>
         <div class="clear"></div>
         <h2>Useful Information</h2>
-        <div class="text1 tx__1"><a href="#">Hivamus at magna non nuncerto limonit nelowert sedrolino. Integer convallis orci vel miеter laoreet, at ornare lorem consequat. Phasellus erat nisl, auctor vel velit sed.</a></div>
-        <p>Nehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeet metus id laoreet rolito monert dertolimon.</p>
-        <p>Nullam consectetur orci sed nulla facilisisequat. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero. </p>
-        Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. <br>
+        <p>Carlin peas are known as “Carlin” because they were traditionally eaten on Carlin Sunday in Lent in the Christian calendar; on this day children are usually served hot Carlin peas in a little cup at the end of a church service. In Lancashire Carlin peas, also known as black, parched or maple peas, are often served on or around Bonfire Night. 
+        </p>
+
+        <br>
         <a href="#" class="btn">Order Online</a>
       </div>
       
@@ -115,23 +113,14 @@
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-pinterest"></a>
         </div>
-        <div class="copyright"><span class="brand">Bliss </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> <div>Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>
+        <div class="copyright"><span class="brand">Food For Thought </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> 
         </div>
       </div>
     </div>
   </div> 
 </footer> 
-  <script>
-  $(function (){
-        $('#bookingForm').bookingForm({
-            ownerEmail: '#'
-        });
-    })
-    $(function() {
-   $('#bookingForm input, #bookingForm textarea').placeholder();
-  });
-    
-  </script>
 </body>
 </html>
+
+
 
