--- a/isss.html
+++ b/isss.html
@@ -86,16 +86,19 @@
         <img src="images/issss.jpg" alt="" class="img_inner fleft inn__1">
         <div class="extra_wrapper">
           <!-- <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div> -->
-          <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
-          <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
-          Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <p>
+It is a completely natural, unrefined sea salt made using a single stage evaporation process that ensures that all the minerals and elements found in the sea are retained in the salt. This gives our salt a distinct, robust flavour but without the bitter aftertaste found in more refined salts.
+
+          </p> 
+
         </div>
         <div class="clear"></div>
         <h2>Useful Information</h2>
-        <div class="text1 tx__1"><a href="#">Hivamus at magna non nuncerto limonit nelowert sedrolino. Integer convallis orci vel miеter laoreet, at ornare lorem consequat. Phasellus erat nisl, auctor vel velit sed.</a></div>
-        <p>Nehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeet metus id laoreet rolito monert dertolimon.</p>
-        <p>Nullam consectetur orci sed nulla facilisisequat. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero. </p>
-        Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. <br>
+
+        <p>In the far north west of Scotland, on the Isle of Skye, there were saltpans over 300 years ago. It is said that in 1703 a small saltpan industry was set up with the financial support of Sir Donald Macdonald, 11th Chief of Clan Donald. This first attempt to produce sea salt on the Isle of Skye has been little documented, and the production, said to have been quite important, disappeared for many years. 
+        </p>
+
+         <br>
         <a href="#" class="btn">Order Online</a>
       </div>
       
@@ -115,23 +118,13 @@
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-pinterest"></a>
         </div>
-        <div class="copyright"><span class="brand">Bliss </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> <div>Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>
+        <div class="copyright"><span class="brand">Food For Thought </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> 
         </div>
       </div>
     </div>
   </div> 
 </footer> 
-  <script>
-  $(function (){
-        $('#bookingForm').bookingForm({
-            ownerEmail: '#'
-        });
-    })
-    $(function() {
-   $('#bookingForm input, #bookingForm textarea').placeholder();
-  });
-    
-  </script>
 </body>
 </html>
+
 
