--- a/wp.html
+++ b/wp.html
@@ -86,16 +86,13 @@
         <img src="images/wps.jpg" alt="" class="img_inner fleft inn__1">
         <div class="extra_wrapper">
           <!-- <div class="text1 tx__1"><a href="#">Vivamus at magna non nunc </a></div> -->
-          <p>Rehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeetert metus id laoreet </p>
-          <p>Nullam consectetur orci sed nulla facilisisequaterto. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero.</p>
-          Praesent faucibus malesuada faucibus. Donecertolin laoreet metus id laoreet malesuada.  orem ipsum dolor sit amet, consectetur adipiscing elit. 
+          <p>Realfoods Food printer mix, Our award winning printer mix has been in the food industry for the past ten years. We use real corn,wheat,soya and palm oil to produce the highest quality food mix. Our Foodmix has won several great taste awards, across the globe. It is highly nutritious and filled with any nutrients you can think of, it is also very low in calories. Only 25 known deaths from our foods over the past ten years, Our foodmix has been named the safest food mix in both sides of the hemisphere. Realfoods.com, we know best. </p> 
         </div>
         <div class="clear"></div>
-        <h2>Useful Information</h2>
-        <div class="text1 tx__1"><a href="#">Hivamus at magna non nuncerto limonit nelowert sedrolino. Integer convallis orci vel miеter laoreet, at ornare lorem consequat. Phasellus erat nisl, auctor vel velit sed.</a></div>
-        <p>Nehoncus. Aliquam nibh antegestas id ictum ado. Praesenterto faucibus maleada faucibusnec laeet metus id laoreet rolito monert dertolimon.</p>
-        <p>Nullam consectetur orci sed nulla facilisisequat. Curabitur vel lorem sit amet nulla perermentum. Aliquam nibh ante, egestas id dictum a, commodo luctus libero. </p>
-        Praesent faucibus malesuada faucibus. Donec laoreet metus id laoreet malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam consectetur orci sed nulla facilisis consequat. Curabitur vel lorem sit amet nulla ullamcorper fermentum. In vitae varius augue, eu consectetur ligula. <br>
+        <h2>More Information</h2>
+        <p>
+You don’t need more info, We are Realfoods.com, We know best.
+</p> <br>
         <a href="#" class="btn">Order Online</a>
       </div>
       
@@ -115,23 +112,14 @@
           <a href="#" class="fa fa-google-plus"></a>
           <a href="#" class="fa fa-pinterest"></a>
         </div>
-        <div class="copyright"><span class="brand">Bliss </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> <div>Website designed by <a href="http://www.templatemonster.com/" rel="nofollow">TemplateMonster.com</a></div>
+        <div class="copyright"><span class="brand">Food For Thought </span> &copy; <span id="copyright-year"></span> | <a href="#">Privacy Policy</a> 
         </div>
       </div>
     </div>
   </div> 
 </footer> 
-  <script>
-  $(function (){
-        $('#bookingForm').bookingForm({
-            ownerEmail: '#'
-        });
-    })
-    $(function() {
-   $('#bookingForm input, #bookingForm textarea').placeholder();
-  });
-    
-  </script>
 </body>
 </html>
+
+
 
